syntax = "proto3";

package com.example.UberSocket;

option java_multiple_files = true;
option java_package = "com.example.UberSocket";
option java_outer_classname = "RideProto";

message RideAcceptanceRequest {
  int64 driver_id = 1;
  int64 booking_id = 2;
}

message RideAcceptanceResponse {
  bool success = 1;
}

service RideService {
  rpc acceptRide(RideAcceptanceRequest) returns (RideAcceptanceResponse);
}


service RideNotificationService {
  rpc notifyDriversForNewRide(RideNotificationRequest) returns (RideNotificationResponse);
}

message RideNotificationRequest {
  string pick_up_location_latitude = 1;
  string pick_up_location_longitude = 2;
  int64 booking_id = 3;
  repeated int64 driver_ids = 4;
}

message  RideNotificationResponse {
  bool success = 1;
}